# apriltag_mit

./: CHANGELOG.rst  CMakeLists.txt  README.txt  package.xml
AprilTags/: TagDetection.h  TagFamily.h
cmake/: OpenCVConfig.cmake  apriltag_mitConfig.cmake.in
example/: CMakeLists.txt  Serial.cpp  Serial.h  apriltags_demo.cpp  arduino_tags.ino
src/: TagDetection.cc  TagDetector.cc  TagFamily.cc
