<?xml version="1.0"?>
<package format="3">
  <name>apriltag_mit</name>
  <version>1.0.0</version>
  <description>ROS2 package wrapper for the MIT apriltag detector</description>
  <author>Michael Kaess</author>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>GPLv2</license>

  <depend>opencv</depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
